--- a/newtab.css
+++ b/newtab.css
@@ -2,6 +2,7 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    background-color: black;
   }
   
   .container {
@@ -29,4 +30,57 @@ html, body {
     font-size: 24px;
     color: white;
   }
-   
+
+  .container {
+    position: relative;
+  }
+  
+  .greeting,
+  .quote,
+  .time,
+  .weather {
+    opacity: 0;
+    animation-name: fade-in;
+    animation-duration: 1s;
+    animation-delay: 0.5s;
+    animation-fill-mode: forwards;
+  }
+  
+  @keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }  
+
+  .settings-icon {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 9999;
+  }
+  
+  .popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    height: 300px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    z-index: 9999;
+    display: none;
+  }
+  
+  .popup iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+  
+  .popup.show {
+    display: block;
+  }
