--- a/options.css
+++ b/options.css
@@ -1,49 +1,71 @@
 .container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  h1 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .form-item {
-    margin-bottom: 20px;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  input[type="text"],
-  select {
-    width: 100%;
-    padding: 8px;
-    font-size: 16px;
-  }
-  
-  .button {
-    display: block;
-    width: 100%;
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-  }  
-  
-  button:hover {
-    background-color: #45a049;
-  }
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+}
 
-  .optionItem {
-    margin-bottom: 10px;
-  }
-  
-  .submitButton {
-    margin-top: 20px;
-  }
+h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.form-item {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+select,
+input[type="color"] {
+  width: 100%;
+  padding: 8px;
+  font-size: 16px;
+}
+
+.button {
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+button:hover {
+  background-color: #45a049;
+}
+
+.optionItem {
+  margin-bottom: 10px;
+}
+
+.submitButton {
+  margin-top: 20px;
+}
+
+input[type="color"] {
+  appearance: none;
+  border: none;
+  width: 100%;
+  height: 40px;
+  padding: 0;
+  margin: 0;
+  background: transparent;
+  outline: none;
+}
+
+input[type="color"]::-webkit-color-swatch-wrapper {
+  padding: 0;
+}
+
+input[type="color"]::-webkit-color-swatch {
+  border: none;
+  border-radius: 5px;
+  padding: 0;
+}
