--- a/options.css
+++ b/options.css
@@ -69,3 +69,19 @@ input[type="color"]::-webkit-color-swatch {
   border-radius: 5px;
   padding: 0;
 }
+
+/* custom checkbox styling */
+
+.checkbox-container {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox-label {
+  margin-left: 8px;
+}
+
+.checkbox {
+  width: 20px;
+  height: 20px;
+}
